# flag_generation_assistant

./: .gitignore  README.md  config.yml  main.py  pyproject.toml  questionary.md  requirements.txt
flag_generation_assistant/: config.yml  main.py  pyproject.toml
flag_generation_assistant/module/qsnctf_progress/: __init__.py
flag_generation_assistant/module/qsnctf_welcome/: __init__.py
module/qsnctf_welcome/: __init__.py
