[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flag_generation_assistant"
version = "0.1.4"
description = "青少年CTF Flag 生成工具"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Moxin", email="1044631097@qq.com" }
]
license = { text = "MIT" }
dependencies = [
    "pyyaml",
    "rich",
    "questionary"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
[tool.setuptools.package-data]
flag_generation_assistant = ["config.yml"]

[project.scripts]
flag_generation_assistant = "flag_generation_assistant.main:main"
flag = "flag_generation_assistant.main:main"
flag_generator = "flag_generation_assistant.main:main"